--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Docker</title>
-      <link rel="stylesheet" href="main.css">
-</head>
-
-<body>
-  <h1>Docker</h1>
-</body>
-
-</html>
+<h1>First Dockerfile in Dockerhub</h1>
